tests/NormalTests/paczka1/fuzzy1/19878336.err
Error in line 1: XBCrL7t S488 21,5
Error in line 6: 6ipMrs S8 52,8
Error in line 5: XBCrL7t A875 94,7
Error in line 9: 6ipMrs S48 205,9
Error in line 4: 4xjcs S488 75,2
Error in line 14: 6ipMrs A875 45,4
Error in line 26: 6ipMrs A42 78,6
Error in line 36: XBCrL7t A42 12,24
Error in line 27: 6ipMrs S48 87,6
